# Labs

Alg/: Ответы на КР по алгосам!!!.md
Alg/lab1/: 1aSort.py  1bSaturday.py  1cMex.py  1dDonation.cpp  2aBinSearch.cpp  2cMafia.cpp  4aCult-Ork.py  4cCow.py
Alg/lab1sem/: 2bCow.cpp  2dWire.cpp  2eSpace.py  3aExperince.cpp  3bCutTheGraph.cpp  3cParking.cpp  4bBackpack.py  5aLevinshtein.py
Alg/lab2sem/: CMakeLists.txt  correct1D.cpp  generate.cpp  generate1D.cpp  rmq.in  task1A.cpp  task1B.cpp  task1C.cpp  task1D.cpp  task1E.cpp  task2A.cpp  task4A.cpp  task5A.cpp  task5B.cpp
Alg/lab3sem/: CMakeLists.txt  deikstra.cpp  dskjdvsf.cpp  graph1a.cpp  graph1b.cpp  graph2a.cpp  graph2c.cpp  graph4a.cpp  string1a.cpp  string1b.cpp  string1c.cpp
DM/lab1/: DM1.py  DM2.py  DM3.cpp  DM4.py  DM5.py  DM6.py  DM7.py  DM8.py
DM/lab2/: lab2-1.cpp  lab2-2.cpp  lab2-3.cpp  lab2-4.cpp  lab2-5.cpp  lab2-6.cpp  lab2-7.py  lab2-8.py
DM/lab3/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.cpp  24.py  25.py  26.py  27.py  28.py  29.py  test.py
DM/lab4/: CMakeLists.txt  problem1.in  problem1.out  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
DM/lab5/: CMakeLists.txt  generate.cpp  notMyTask3.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  useless.in  useless.out
DM/lab6/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
DM/stress/: MyStress.py  correct.cpp  correct2.cpp  gen.cpp  gen1.cpp  input.txt  stupid.cpp  stupid.txt  stupid1.cpp  stupid1.txt
