cmake_minimum_required(VERSION 3.21)
project(lab2sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(task1A
        task1A.cpp)

add_executable(task1B
        task1B.cpp)

add_executable(task1C
        task1C.cpp)

add_executable(task1D
        task1D.cpp)

add_executable(task1E
        task1E.cpp)

add_executable(task2A
        task2A.cpp)

add_executable(task4A
        task4A.cpp)

add_executable(task5A
        task5A.cpp)

add_executable(task5B
        task5B.cpp)

add_executable(generate
        generate.cpp)

add_executable(generate1D
        generate1D.cpp)

add_executable(correct1D
        correct1D.cpp)