cmake_minimum_required(VERSION 3.21)
project(lab3sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(deikstra
        deikstra.cpp)

add_executable(graph1a
        graph1a.cpp)

add_executable(graph1b
        graph1b.cpp)

add_executable(graph2a
        graph2a.cpp)

add_executable(graph2c
        graph2c.cpp)

add_executable(graph4a
        graph4a.cpp)

add_executable(string1a
        string1a.cpp)

add_executable(string1b
        string1b.cpp)

add_executable(string1c
        string1c.cpp)

add_executable(test
        dskjdvsf.cpp)