cmake_minimum_required(VERSION 3.21)
project(lab5)

set(CMAKE_CXX_STANDARD 14)

add_executable(task1
        task1.cpp)

add_executable(task2
        task2.cpp)

add_executable(task3
        task3.cpp)

add_executable(task4
        task4.cpp)

add_executable(notMyTask3
        notMyTask3.cpp)

add_executable(generate
        generate.cpp)